k8s-learn/ingress/ing-svc.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: example-ingress
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /$1
# spec:
#   rules:
#     - host: local.dev
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: service1
#                 port:
#                   number: 80
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  labels:
    app.kubernetes.io/component: controller 
  name: nginx
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: k8s.io/ingress-nginx

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    kubernetes.io/tls-acme: 'true'
  name: example-ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - svc1.local.dev
    - svc2.local.dev
    secretName: tls-secret
  rules:
  - host: svc1.local.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: http-svc1
            port:
              number: 80
  - host: svc2.local.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: http-svc2
            port:
              number: 80
---
